Fix text-wrap problems

--- a/app/styles/_diplomaticEdition.scss
+++ b/app/styles/_diplomaticEdition.scss
@@ -3,12 +3,10 @@
 /* *************************** */
 
 .diplomaticEdition {
-
 	// Abbreviations and Expansions
 	.choice {
-
 		position: relative;
-		white-space: nowrap;
+		text-align: center;
 
 		.abbr {
 			color: purple;
@@ -31,14 +29,13 @@
 		&:hover .expan, &.hover .expan {
 			display: inline;
 			min-width: 20px;
-			text-align: center;
 			z-index: 99;
 	  	}
 	  
 	  	&:hover .abbr, &.hover .abbr {
 			color: #561c0a;
 			text-decoration: underline;
-			z-index: 9;
+			z-index: 9;			
 		}
 
 		.expan {
@@ -65,29 +62,19 @@
 				background: transparent;
 			}
 		}
-	
+
 		.expan, .expan * {
 			background: #e5dac4 !important;
 		}
 		
 		// Abbreviations and Expansions inside Orig and Reg classes
 
-		&:hover .reg > .expan, &:hover .expan > .ex {
-			position: relative;
-			text-align: center;
-			display: flex;
-		}
-
 		.reg  > .expan, .expan > .ex {
 			font-size: 100%;
-			line-height: 16px;
-			display: none;
+			position: relative;
 			border: none;
 			border-radius: none;
-			padding: none;
 			margin-top: 0px;
-			left: 0;
-			float: left;
 
 			@include set(box-shadow, 0px 0px 0px);
 
@@ -142,7 +129,7 @@
 		}
 
 		&:hover .reg, &.hover .reg {
-			display: flex;	
+			display: inline;	
 			min-width: 20px;
 			z-index: 99;
 		}
@@ -165,7 +152,7 @@
 			border: 1.5px solid black;
 			border-radius: 3px;
 			padding: 0.4%;
-			margin-top: 10px;
+			margin-top: 30px;
 
 			@include set(box-shadow, 2px 2px 2px #7e7067);
 
